# cellular-automata-3D

./: CMakeLists.txt  README.md
projects/VS2022/raylib_game/: Cell.cpp  Cell.h  CellularAutomata.cpp  CellularAutomata.h  Grid.cpp  Grid.h  main.cpp  raylib_game.vcxproj
projects/VS2022/raylib_game/Rules/: CustomRule.cpp  CustomRule.h  ExpandingRule.cpp  ExpandingRule.h  FocusedRule.cpp  FocusedRule.h  GameOfLifeRule.cpp  GameOfLifeRule.h  IRule.h  InfiniteRule.cpp  InfiniteRule.h
src/: Grid.h  main.cpp
src/Rules/: FocusedRule.cpp  FocusedRule.h  IRule.cpp  IRule.h  InfiniteRule.cpp
